--- a/resume.html
+++ b/resume.html
@@ -9,131 +9,139 @@
   <body lang="en">
     <section id="main">
       <header id="title">
-        <h1>John Doe</h1>
-        <span class="subtitle">Plaintiff, defendant &amp; witness</span>
+        <h1>吴斌</h1>
+        <span class="subtitle">Web前端 &amp; Node.js开发</span>
       </header>
       <section class="main-block">
         <h2>
-          <i class="fa fa-suitcase"></i> Experiences
+          <i class="fa fa-suitcase"></i> 工作经历
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2015</span><span>present</span>
+            <span>2020.08</span><span>现在</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Some Position</h3>
-              <span class="place">Some Workplace</span>
-              <span class="location">(remote)</span>
+              <h3>中电金信软件有限公司(外派腾讯小鹅拼拼项目、S3人力数据中台项目)</h3>
+              <span class="place">Web前端开发工程师</span>
+              <span class="location">深圳</span>
             </header>
             <div>
               <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio. Vestibulum dapibus pharetra odio, egestas ullamcorper ipsum congue ac. Maecenas viverra tortor eget convallis vestibulum. Donec pulvinar venenatis est, non sollicitudin metus laoreet sed. Fusce tincidunt felis nec neque aliquet porttitor</li>
+                <li>负责小鹅B端业务系统开发工作，实现工具效率化，提高团队项目业务输出</li>
+                <li>负责S3内部系统数据、echarts可视化看板开发，实现产品需求，针对不同业务场景提供前端开发解决方案</li>
               </ul>
               </div>
           </div>
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2014</span><span>2015</span>
+            <span>2018.07</span><span>2020.03</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Another Position</h3>
-              <span class="place">Some Workplace</span>
-              <span class="location">Some City, Some Country</span>
+              <h3>广东高乐教育科技有限公司</h3>
+              <span class="place">Web前端开发工程师</span>
+              <span class="location">广州</span>
             </header>
             <div>
               <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                <li>负责前端技术架构思路实现，从0到1搭建项目。根据产品业务需求开发功能产出</li>
+                <li>负责前端项目的搭建、开发、优化、运维，负责从传统web项目转变为前后端分离项目</li>
               </ul>
             </div>
-          </div>
-        </section>
-        <section class="blocks">
-          <div class="date">
-            <span>2013</span><span>2014</span>
-          </div>
-          <div class="decorator">
-          </div>
-          <div class="details">
-            <header>
-              <h3>Yet Another Job Position</h3>
-              <span class="place">Some Workplace</span>
-              <span class="location">Some City, Some Country</span>
-            </header>
-            <div>
-              <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-              </ul>
-              </div>
           </div>
         </section>
       </section>
       <section class="main-block">
         <h2>
-          <i class="fa fa-folder-open"></i> Selected Projects
+          <i class="fa fa-folder-open"></i> 项目经验
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2015</span><span>2016</span>
+            <span>2020</span><span>2022</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Some Project 1</h3>
-              <span class="place">Some workplace</span>
+              <h3>椰子营销推广系统</h3>
+              <span class="place">技术栈:vue2 vue-router vuex epp-ui(element-ui)</span>
             </header>
             <div>
               <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio. Vestibulum dapibus pharetra odio, egestas ullamcorper ipsum congue ac</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio</li>
+                <li>椰子营销推广系统是针对小鹅拼拼运营配置，主要功能有优惠券、净贴补贴、折扣、营销推广配置等。项目使用Vue2 前端框架 UI框架基于ElementUI二次封装。</li>
+                <li>项目开发过程自我实现基于微信小程序canvas封装库(已开源，可在git.woa系统搜索canvas-draw)，针对小鹅拼拼 小程序绘制分享拼图，简化代码，提高效率。</li>
+                <li>项目迭代开发过程中发现需要约束git commit规范，业余时间实现commit提交小工具，已发布到内部tnpm源，包 名:@tencent/git-cmt</li>
+                <li>独立完成业务需求开发，过程发现现有代码较为臃肿，出现很多耦合的代码，根据现有代码进行解耦重构优化，代码 减少率达到50%，提供前端项目交互体验最佳方案。</li>
+                <li>项目需求非紧张时期支援其他项目⻛控系统、运营系统、电商中台系统，电商CRM系统</li>
               </ul>
             </div>
           </div>
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2014</span><span>2015</span>
+            <span>2018</span><span>2020</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Some Project 2</h3>
-              <span class="place">Some workplace</span>
+              <h3>高乐云教育平台</h3>
+              <span class="place">技术栈: React Angular1 CoffeeScript NodeJs Express Layui</span>
             </header>
             <div>
               <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio. Vestibulum dapibus pharetra odio, egestas ullamcorper ipsum congue ac. Maecenas viverra tortor eget convallis vestibulum. Donec pulvinar venenatis est, non sollicitudin metus laoreet sed. Fusce tincidunt felis nec neque aliquet porttitor</li>
+                <li>负责从零搭建和前端架构设计，以NodeJs作渲染View层的一个前端微服务项目。为了兼容性选用angular1框架，在实
+                  际开发过程又作为前后端分离的中间层⻆色，灵活性解决多个不同服务之间带来的问题。</li>
+                <li>为了提高⻚面性能，以性能优先的考虑进行底层核心封装，减少不必要的开源依赖。后面发现难以实现模块组件化方 式问题进行调整，放弃兼容性，采用parcel-bundle用React进行无缝式引入项目，既不影响原项目技术，从而解决原有 的组件化开发问题。</li>
               </ul>
             </div>
           </div>
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2014</span>
+            <span>2018</span><span>2020</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Some Project 3</h3>
-              <span class="place">Some workplace</span>
+              <h3>云平台微信h5项目</h3>
+              <span class="place">技术栈: vue2 mint-ui</span>
             </header>
             <div>
               <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec mi ante. Etiam odio eros, placerat eu metus id, gravida eleifend odio</li>
+                <li>选用 vue.js 框架 mint-ui 组件进行项目搭建,负责移动端⻚面开发实现以及静态 web 微服务搭建。解决一个项目多个地
+                  区多个不同服务处理问题。</li>
+                <li>对移动端性能要求较高，针对项目代码进行打包压缩混淆按需加载，图片压缩合并作雪碧图，服务端设置静态资源缓
+                  存以及开启 gzip 压缩，加快移动端⻚面访问速度。为了解决移动端适配问题以 rem 单位作适配方案。</li>
+                <li>实现项目自动化持续集成CI/CD静态项目部署脚本，选用 Jenkins 实现自动化部署流程。</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="blocks">
+          <div class="date">
+            <span>2017</span><span>2018</span>
+          </div>
+          <div class="decorator">
+          </div>
+          <div class="details">
+            <header>
+              <h3>孝信智云教育平台</h3>
+              <span class="place">技术栈: Ruby on Rails/Mysql/jQuery/CoffeeScript</span>
+            </header>
+            <div>
+              <ul>
+                <li>负责孝信智 Web 项目开发，典型的传统 Web 项目，主要负责⻚面新功能模块开发，维护旧代码模块，后续负责项目
+                  拆分，进行前后端项目分离。</li>
+                <li>从传统 Web MPA 分离后单⻚面 SPA 采用 Webpack 打包而前端框架为了做兼容选择 angular1，前后端分离项目后进
+                  行大规模重构，解决之前 MPA 造成的前端开发效率以及前端自动化问题，以 SPA 提高⻚面性能体验。</li>
               </ul>
             </div>
           </div>
@@ -141,71 +149,20 @@
       </section>
       <section class="main-block concise">
         <h2>
-          <i class="fa fa-graduation-cap"></i> Education
+          <i class="fa fa-graduation-cap"></i> 教育经历
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2009</span><span>2014</span>
+            <span>2020</span><span>2022</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>Ph.D. in Forty-Two Discovery</h3>
-              <span class="place">Inexistent University</span>
-              <span class="location">Some City, Some Country</span>
+              <h3>电子科技大学</h3>
+              <span class="place">计算机应用技术</span>
+              <span class="location">大专</span>
             </header>
-            <div>Relationship of the number with the answer to life, the universe and everything</div>
-          </div>
-        </section>
-        <section class="blocks">
-          <div class="date">
-            <span>2005</span><span>2009</span>
-          </div>
-          <div class="decorator">
-          </div>
-          <div class="details">
-            <header>
-              <h3>LL.B. in H&aelig;matophagic Economics</h3>
-              <span class="place">Inexistent University</span>
-              <span class="location">Some City, Some Country</span>
-            </header>
-            <div>President's Scholarship</div>
-          </div>
-        </section>
-        <section class="blocks">
-          <div class="date">
-            <span>2005</span><span>2009</span>
-          </div>
-          <div class="decorator">
-          </div>
-          <div class="details">
-            <header>
-              <h3>B.S. in Existential Science (Double Major)</h3>
-              <span class="place">Inexistent University</span>
-              <span class="location">Some City, Some Country</span>
-            </header>
-            <div>President's Scholarship</div>
-          </div>
-        </section>
-        <section class="blocks">
-          <div class="date">
-          </div>
-          <div class="decorator">
-          </div>
-          <div class="details">
-            <header>
-              <h3>Massive Online Fee&ndash;Required Course (selective list)</h3>
-            </header>
-            <div class="concise">
-              <ul>
-                <li>Introduction to something else</li>
-                <li>Introduction to some more useless things</li>
-                <li>Philosophy in practice</li>
-                <li>Recursive research and its impact on recursive research</li>
-                <li>Artificial politics</li>
-              </ul>
-            </div>
           </div>
         </section>
       </section>
@@ -213,30 +170,41 @@
     <aside id="sidebar">
       <div class="side-block" id="contact">
         <h1>
-          Contact Info
+          个人信息
         </h1>
         <ul>
-          <li><i class="fa fa-globe"></i> johndoe.gtld</li>
-          <li><i class="fa fa-linkedin"></i> linkedin.com/in/john</li>
-          <li><i class="fa fa-envelope"></i> me@johndoe.gtld</li>
-          <li><i class="fa fa-phone"></i> 800.000.0000</li>
+          <li><i class="fa fa-globe"></i> 性别: 男</li>
+          <li><i class="fa fa-linkedin"></i> 出生日期: 1998.09</li>
+          <li><i class="fa fa-envelope"></i> 工作年限: 5年</li>
+          <li><i class="fa fa-phone"></i> 联系方式: 17665371131</li>
+          <li><i class="fa fa-phone"></i> Email: w827433149@gmail.com</li>
+          <li><i class="fa fa-phone"></i> Github: github.com/wubin1998</li>
         </ul>
       </div>
       <div class="side-block" id="skills">
         <h1>
-          Skills
+          技能
         </h1>
         <ul>
-          <li>Omnipresence</li>
-          <li>Anonymity</li>
+          <li>前端框架/库</li>
+          <li>React/Vue/Angular1/jQuery</li>
         </ul>
         <ul>
-          <li>Ordinarity</li>
-          <li>No name rights</li>
+          <li>前端工具</li>
+          <li>Parcel/WebPack/Gulp</li>
         </ul>
-      </div>
-      <div class="side-block" id="disclaimer">
-        This r&eacute;sum&eacute; was wholly typeset with HTML/CSS &mdash; see <code>git.io/vVSYL</code>
+        <ul>
+          <li>Web框架</li>
+          <li>Express.Js/Koa2/Sails.js/Ruby on Rails</li>
+        </ul>
+        <ul>
+          <li>数据库</li>
+          <li>Mysql/Mongodb</li>
+        </ul>
+        <ul>
+          <li>版本管理/自动化部署工具</li>
+          <li>Git/Jenkins</li>
+        </ul>
       </div>
     </aside>
   </body>
