--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
           </div>
           <div class="details">
             <header>
-              <h3>中电金信软件有限公司(外派腾讯小鹅拼拼项目、S3人力数据中台项目)</h3>
+              <h3>中电金信软件有限公司(腾讯小鹅拼拼项目、S3人力数据中台项目)</h3>
               <span class="place">Web前端开发工程师</span>
               <span class="location">深圳</span>
             </header>
@@ -63,22 +63,21 @@
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2020</span><span>2022</span>
+            <span>2020</span><span>2023</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>椰子营销推广系统</h3>
+              <h3>腾讯小鹅拼拼营销系统</h3>
               <span class="place">技术栈:vue2 vue-router vuex epp-ui(element-ui)</span>
             </header>
             <div>
               <ul>
-                <li>椰子营销推广系统是针对小鹅拼拼运营配置，主要功能有优惠券、净贴补贴、折扣、营销推广配置等。项目使用Vue2 前端框架 UI框架基于ElementUI二次封装。</li>
+                <li>腾讯小鹅拼拼营销系统是针对小鹅拼拼运营配置，主要功能有优惠券、净贴补贴、折扣、营销推广配置等。项目使用Vue2 前端框架 UI框架基于ElementUI二次封装。</li>
                 <li>项目开发过程自我实现基于微信小程序canvas封装库(已开源，可在git.woa系统搜索canvas-draw)，针对小鹅拼拼 小程序绘制分享拼图，简化代码，提高效率。</li>
                 <li>项目迭代开发过程中发现需要约束git commit规范，业余时间实现commit提交小工具，已发布到内部tnpm源，包 名:@tencent/git-cmt</li>
-                <li>独立完成业务需求开发，过程发现现有代码较为臃肿，出现很多耦合的代码，根据现有代码进行解耦重构优化，代码 减少率达到50%，提供前端项目交互体验最佳方案。</li>
-                <li>项目需求非紧张时期支援其他项目⻛控系统、运营系统、电商中台系统，电商CRM系统</li>
+                <li>独立完成业务需求开发，过程发现现有代码较为臃肿，出现很多耦合的代码，根据现有代码进行解耦重构优化，代码减少率达到50%，提供前端项目交互体验最佳方案。</li>
               </ul>
             </div>
           </div>
