--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <section id="main">
       <header id="title">
         <h1>吴斌</h1>
-        <span class="subtitle">Web前端 &amp; Node.js开发</span>
+        <span class="subtitle">Web前端 &amp; 小程序 &amp; Node.js开发</span>
       </header>
       <section class="main-block">
         <h2>
@@ -18,20 +18,39 @@
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2020.08</span><span>现在</span>
+            <span>2024.02</span><span>现在</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>中电金信软件有限公司(腾讯小鹅拼拼项目、S3人力数据中台项目)</h3>
+              <h3>梅州市嘉客体育科技有限公司</h3>
+              <span class="place">全栈开发工程师</span>
+              <span class="location">梅州</span>
+            </header>
+            <div>
+              <ul>
+                <li>负责公司小程序开发工作，协助开展体育赛事活动，推进梅州研学管理平台项目落地。</li>
+              </ul>
+              </div>
+          </div>
+        </section>
+        <section class="blocks">
+          <div class="date">
+            <span>2020.08</span><span>2024.01</span>
+          </div>
+          <div class="decorator">
+          </div>
+          <div class="details">
+            <header>
+              <h3>中电金信软件有限公司(腾讯小鹅拼拼项目、腾讯S3人力数据中台项目)</h3>
               <span class="place">Web前端开发工程师</span>
               <span class="location">深圳</span>
             </header>
             <div>
               <ul>
-                <li>负责小鹅B端业务系统开发工作，实现工具效率化，提高团队项目业务输出</li>
-                <li>负责S3内部系统数据、echarts可视化看板开发，实现产品需求，针对不同业务场景提供前端开发解决方案</li>
+                <li>负责腾讯小鹅拼拼B端业务系统开发工作，实现工具效率化，提高团队项目业务输出</li>
+                <li>负责S3人力内部系统数据、echarts可视化看板开发，实现产品需求，针对不同业务场景提供前端开发解决方案</li>
               </ul>
               </div>
           </div>
@@ -69,15 +88,30 @@
           </div>
           <div class="details">
             <header>
+              <h3>嘉客家小程序</h3>
+              <span class="place">技术栈: uni-app</span>
+            </header>
+            <div>
+              <ul>
+                <li>负责嘉客家小程序开发，主导剑英体育馆羽毛球订场功能开发，并为场馆搭建会员系统，有效提升用户留存率。主导「五四青年杯足球赛」线上报名系统搭建，（累计报名超 300 人），实现球队信息管理、赛程自动编排全流程数字化。</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="blocks">
+          <div class="date">
+            <span>2020</span><span>2023</span>
+          </div>
+          <div class="decorator">
+          </div>
+          <div class="details">
+            <header>
               <h3>腾讯小鹅拼拼营销系统</h3>
               <span class="place">技术栈:vue2 vue-router vuex epp-ui(element-ui)</span>
             </header>
             <div>
               <ul>
-                <li>腾讯小鹅拼拼营销系统是针对小鹅拼拼运营配置，主要功能有优惠券、净贴补贴、折扣、营销推广配置等。项目使用Vue2 前端框架 UI框架基于ElementUI二次封装。</li>
-                <li>项目开发过程自我实现基于微信小程序canvas封装库(已开源，可在git.woa系统搜索canvas-draw)，针对小鹅拼拼 小程序绘制分享拼图，简化代码，提高效率。</li>
-                <li>项目迭代开发过程中发现需要约束git commit规范，业余时间实现commit提交小工具，已发布到内部tnpm源，包 名:@tencent/git-cmt</li>
-                <li>独立完成业务需求开发，过程发现现有代码较为臃肿，出现很多耦合的代码，根据现有代码进行解耦重构优化，代码减少率达到50%，提供前端项目交互体验最佳方案。</li>
+                <li>腾讯小鹅拼拼营销系统是针对小鹅拼拼运营配置，主要功能有优惠券、净贴补贴、折扣、营销推广配置等。项目使用Vue2 前端框架 UI框架基于ElementUI二次封装。项目开发过程自我实现基于微信小程序canvas封装库(已开源，可在git.woa系统搜索canvas-draw)，针对小鹅拼拼 小程序绘制分享拼图，简化代码，提高效率。独立完成业务需求开发，过程发现现有代码较为臃肿，出现很多耦合的代码，根据现有代码进行解耦重构优化，代码减少率达到50%，提供前端项目交互体验最佳方案。</li>
               </ul>
             </div>
           </div>
@@ -96,30 +130,7 @@
             <div>
               <ul>
                 <li>负责从零搭建和前端架构设计，以NodeJs作渲染View层的一个前端微服务项目。为了兼容性选用angular1框架，在实
-                  际开发过程又作为前后端分离的中间层⻆色，灵活性解决多个不同服务之间带来的问题。</li>
-                <li>为了提高⻚面性能，以性能优先的考虑进行底层核心封装，减少不必要的开源依赖。后面发现难以实现模块组件化方 式问题进行调整，放弃兼容性，采用parcel-bundle用React进行无缝式引入项目，既不影响原项目技术，从而解决原有 的组件化开发问题。</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section class="blocks">
-          <div class="date">
-            <span>2018</span><span>2020</span>
-          </div>
-          <div class="decorator">
-          </div>
-          <div class="details">
-            <header>
-              <h3>云平台微信h5项目</h3>
-              <span class="place">技术栈: vue2 mint-ui</span>
-            </header>
-            <div>
-              <ul>
-                <li>选用 vue.js 框架 mint-ui 组件进行项目搭建,负责移动端⻚面开发实现以及静态 web 微服务搭建。解决一个项目多个地
-                  区多个不同服务处理问题。</li>
-                <li>对移动端性能要求较高，针对项目代码进行打包压缩混淆按需加载，图片压缩合并作雪碧图，服务端设置静态资源缓
-                  存以及开启 gzip 压缩，加快移动端⻚面访问速度。为了解决移动端适配问题以 rem 单位作适配方案。</li>
-                <li>实现项目自动化持续集成CI/CD静态项目部署脚本，选用 Jenkins 实现自动化部署流程。</li>
+                  际开发过程又作为前后端分离的中间层⻆色，灵活性解决多个不同服务之间带来的问题。为了提高⻚面性能，以性能优先的考虑进行底层核心封装，减少不必要的开源依赖。后面发现难以实现模块组件化方 式问题进行调整，放弃兼容性，采用parcel-bundle用React进行无缝式引入项目，既不影响原项目技术，从而解决原有 的组件化开发问题。</li>
               </ul>
             </div>
           </div>
@@ -138,8 +149,7 @@
             <div>
               <ul>
                 <li>负责孝信智 Web 项目开发，典型的传统 Web 项目，主要负责⻚面新功能模块开发，维护旧代码模块，后续负责项目
-                  拆分，进行前后端项目分离。</li>
-                <li>从传统 Web MPA 分离后单⻚面 SPA 采用 Webpack 打包而前端框架为了做兼容选择 angular1，前后端分离项目后进
+                  拆分，进行前后端项目分离。从传统 Web MPA 分离后单⻚面 SPA 采用 Webpack 打包而前端框架为了做兼容选择 angular1，前后端分离项目后进
                   行大规模重构，解决之前 MPA 造成的前端开发效率以及前端自动化问题，以 SPA 提高⻚面性能体验。</li>
               </ul>
             </div>
@@ -164,6 +174,20 @@
             </header>
           </div>
         </section>
+        <section class="blocks">
+          <div class="date">
+            <span>2022</span><span>2024</span>
+          </div>
+          <div class="decorator">
+          </div>
+          <div class="details">
+            <header>
+              <h3>汕头大学</h3>
+              <span class="place">设计美学</span>
+              <span class="location">本科</span>
+            </header>
+          </div>
+        </section>
       </section>
     </section>
     <aside id="sidebar">
@@ -174,7 +198,7 @@
         <ul>
           <li><i class="fa fa-globe"></i> 性别: 男</li>
           <li><i class="fa fa-linkedin"></i> 出生日期: 1998.09</li>
-          <li><i class="fa fa-envelope"></i> 工作年限: 5年</li>
+          <li><i class="fa fa-envelope"></i> 工作年限: 8年</li>
           <li><i class="fa fa-phone"></i> 联系方式: 17665371131</li>
           <li><i class="fa fa-phone"></i> Email: w827433149@gmail.com</li>
           <li><i class="fa fa-phone"></i> Github: github.com/wubin1998</li>
